profile view changes

--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -128,10 +128,12 @@
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
-				<button class="btn sign_mybtn all-btn primary-btn">Save</button>
-				<button class="btn sell-equ all-btn cont-renting">
-					Cancel
-				</button>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<button class="btn sign_mybtn all-btn primary-btn profile-save-btn">Save</button>
+					<button class="btn sell-equ all-btn cont-renting">
+						Cancel
+					</button>
+				</div>
 			</div>
 		</div>
 
@@ -156,16 +158,18 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right change-portal-credentials">
+				<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right change-portal-credentials">
 					<a class="desc-text invoice-no">Change Credentials</a>
-				</div>
+				</div> -->
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profile-setting portal-security-ques">
 					<h3 class="desc-text bold-font">Portal Security Question</h3>
 					<p class="desc-text">Recovery Email: 
 						<input class="form-control" placeholder="Email">
 					</p>
-					<p class="desc-text">Security Question:</p>
+					<p class="desc-text">Security Question:
+						<input class="form-control" placeholder="Question">
+					</p>
 					<p class="desc-text">Security Answer:
 						<input class="form-control" placeholder="Answer">
 					</p>
@@ -173,10 +177,12 @@
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
-				<button class="btn sign_mybtn all-btn primary-btn">Save</button>
-				<button class="btn sell-equ all-btn cont-renting">
-					Cancel
-				</button>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<button class="btn sign_mybtn all-btn primary-btn profile-save-btn">Save</button>
+					<button class="btn sell-equ all-btn cont-renting">
+						Cancel
+					</button>
+				</div>
 			</div>
 		</div>
 
@@ -213,10 +219,12 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
-					<button class="btn sign_mybtn all-btn primary-btn">Save</button>
-					<button class="btn sell-equ all-btn cont-renting">
-						Cancel
-					</button>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<button class="btn sign_mybtn all-btn primary-btn profile-save-btn">Save</button>
+						<button class="btn sell-equ all-btn cont-renting">
+							Cancel
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
