shopping cart change

--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -1,7 +1,7 @@
 <div class="row">
   <!-- web shopping cart -->
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-col nopadding table-responsive hidden-sm hidden-xs">
-    <table class="table cart-table">
+    <table class="table cart-table carts-table">
       <thead>
       <tr>
         <th></th>
