--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -1,8 +1,8 @@
 <div class="row">
 
   <!-- select and add jobsite part -->
-  <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12 leftpadding">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 leftpadding">
       <ul class="nav nav-tabs gride-tab root-category">
         <li class="active">
           <a tabtoggle data-toggle="tab" href="#existing-job">Existing Job Sites</a>
@@ -13,9 +13,9 @@
       </ul>
     </div>
     <!-- update existing job -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active" id="existing-job">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active leftpadding" id="existing-job">
 
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list update-job">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list update-job leftpadding">
         <div class="form-control search-div">
           <i class="fa fa-search"></i>
           <input type="text" placeholder="Search" ng-model="searchJosite">
@@ -44,32 +44,32 @@
   					Name of Contact Person
   				</span>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 select-date-heading">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 select-date-heading leftpadding">
         <h3 class="heading-text">Contact Information</h3>
         <p class="desc-text">This is for in case we need to contact you about your order or at Jobsite Location Details</p>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time leftpadding">
         <div class="form-control search-div">
           <input type="text" placeholder="First Name">
-          <i class="fa fa-user"></i>
+          <i class="fa fa-user pull-right"></i>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
         <div class="form-control search-div">
           <input type="text" placeholder="Last Name">
-          <i class="fa fa-user"></i>
+          <i class="fa fa-user pull-right"></i>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time leftpadding">
         <div class="form-control search-div">
           <input type="text" placeholder="Email">
-          <i class="fa fa-envelope-o"></i>
+          <i class="fa fa-envelope-o pull-right"></i>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
         <div class="form-control search-div">
           <input type="text" placeholder="Phone Number">
-          <i class="fa fa-phone"></i>
+          <i class="fa fa-phone pull-right"></i>
         </div>
       </div>
       <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 special-instruction heading-border">
