--- a/src/app/cart/cart-snapshot.html
+++ b/src/app/cart/cart-snapshot.html
@@ -11,7 +11,10 @@
         <span class="desc-text pull-right qty-summary">Qty: {{cartData[product.Product_id].qty}}</span>
         <p class="desc-text bold-font total">
           ${{product.Product_rate}}
-          <i class="fa fa-trash pull-right color-blue qty-summary heading-text"></i>
+          <a ng-click="deleteProductFromCart(product.Product_id,cartData[product.Product_id])">
+            <i class="pull-right color-blue qty-summary heading-text" ng-class="{'fa fa-trash': !cartData[product.Product_id].deleteInProgress,'fa fa-spinner fa-spin': cartData[product.Product_id].deleteInProgress}" ></i>
+          </a>
+
         </p>
       </li>
     </ul>
