--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -86,25 +86,42 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 promo-code">
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 promo-code lr-padding lr-padding-small">
     <input type="text" placeholder="Promo code" class="form-control" ng-model="promoCode">
     <button class="btn sign_mybtn all-btn primary-btn" ng-click="applyPromoCode()">
       <span btn-load-indicator="Cart:ApplyPromoCode">Apply</span>
     </button>
   </div>
-  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 total-price">
-    <div class="total-price-div">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 total-price lr-padding lr-padding-small">
+    <!-- <div class="total-price-div text-left total-price-padding">
       <h3>
-        <label>Sub-Total Rental:</label>
-        <span>${{cart.Sub_total}}</span>
+        <label>Sub-Total Rental:
+        </label>
+          <span class="pull-right">${{cart.Sub_total}}</span>
       </h3>
       <h3 ng-repeat="(key, value) in cart.Charges">
-        <label>{{key}}:</label>
-        <span>${{value}}</span>
+        <label>{{key}}:
+        </label>
+          <span class="pull-right">${{value}}</span>
       </h3>
       <h3>
-        <label class="total">Total:</label>
-        <span class="total">${{cart.Grand_total}}</span>
+        <label class="total">Total:
+        </label>
+          <span class="total pull-right">${{cart.Grand_total}}</span>
+      </h3>
+    </div> -->
+    <div class="text-left total-price-padding">
+      <h3 class="desc-text">
+        <label>Sub-Total Rental:</label>
+        <span class="pull-right">${{cart.Sub_total}}</span>
+      </h3>
+      <h3 class="desc-text" ng-repeat="(key, value) in cart.Charges">
+        <label>{{key}}:</label>
+        <span class="pull-right">${{value}}</span>
+      </h3>
+      <h3 class="desc-text bold-font">
+        <label>Total:</label>
+        <span class="pull-right">${{cart.Grand_total}}</span>
       </h3>
     </div>
   </div>
