--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -14,7 +14,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
         </div> -->
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lr-padding lr-padding-small">
             <ul class="progress-indicator custom-complex">
               <li class="completed on-hover-pointer" ui-sref="hm.cart.details">
                 <a class="color-blue bold-font desc-text progress-a">
