--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -19,11 +19,13 @@
     <!-- <div class="hide-header-navbar" ng-class="{'show-header-navbar': showHeader}"> -->
     <div class="col-lg-4 col-md-4 col-sm-10 col-xs-8 my_alc nopadding hidden-lg hidden-md header-prof-part">
         <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
-          <button class="btn btn-mini my-alc-btn nopadding prof-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
-          <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn" id="single-button" dropdown-toggle>
+          <button class="btn btn-mini my-alc-btn nopadding prof-btn" id="single-button" dropdown-toggle><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}
+          <!-- <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn">
             <span class="caret"></span>
+          </button> -->
+          <i class="fa fa-caret-down color-blue heading-text"></i>
           </button>
-          <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu">
+          <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu" aria-labelledby="single-button">
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/dashboard">Dashboard</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#/orders/history">Recent Orders</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Purchases</a></li>
@@ -95,11 +97,10 @@
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 my_alc hide-header-navbar nopadding header-prof-part visible-md visible-lg">
 
         <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
-          <button class="btn btn-mini my-alc-btn nopadding prof-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
-          <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn" id="single-button" dropdown-toggle>
-            <span class="caret"></span>
+          <button class="btn btn-mini my-alc-btn nopadding prof-btn" id="single-button" dropdown-toggle><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}
+            <i class="fa fa-caret-down color-blue heading-text"></i>
           </button>
-          <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu">
+          <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu" aria-labelledby="single-button">
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/dashboard">Dashboard</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#/orders/history">Recent Orders</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Purchases</a></li>
