--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -78,9 +78,9 @@
             <!--<a class="btn pull-right all-btn sign_mybtn primary-btn" href="" type="submit">Add Quantity</a>-->
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <a class="btn all-btn sign_mybtn primary-btn pull-right" ng-click="equipmentReserve()" type="submit">
+            <button class="btn all-btn sign_mybtn primary-btn pull-right" ng-click="equipmentReserve()" type="submit">
               <span btn-load-indicator="Equipment:Reserve:Process">Add to Cart</span>
-            </a>
+            </button>
           </div>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 table-top">
