--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -48,6 +48,9 @@
           </div> -->
         </div>
         <div class="col-lg-6 reserve-right">
+          <form ng-submit="equipmentReserve()">
+
+
           <h4 class="reserve_eqe_tit">
             {{product.Product_Name}}
             <span class="reserve_eqe_num text-center">{{product.MODEL}}</span>
@@ -82,6 +85,7 @@
               <span btn-load-indicator="Equipment:Reserve:Process">Add to Cart</span>
             </button>
           </div>
+          </form>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 table-top">
         <!--<table class="table table-bordered reserve-table">-->
