--- a/src/app/jobsites/jobsites.html
+++ b/src/app/jobsites/jobsites.html
@@ -53,36 +53,19 @@
         <a ui-sref="hm.dashboard.jobSites.addJobSite" class="btn pull-left manage-job-btn add-job-site-btn sign_mybtn all-btn primary-btn">Add Job Site</a>
         <!-- <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn">List View</button>
         <button class="btn pull-right manage-job-btn map map-view-btn">Map View</button> -->
-        <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : flags.listView}" ng-click="toggleListView(true)">List View</button>
-        <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn all-btn" ng-click="toggleListView(false)" ng-class="{'active primary-btn' : !flags.listView}">Map View</button>
+        <a class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : params.listView}" >List View</button>
+        <a class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn all-btn"  ng-class="{'active primary-btn' : !params.listView}">Map View</button>
       </div>
       <!-- map view start -->
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box" ng-if="!flags.listView">
-        <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box" ng-if="!params.listView">
+        <job-site-map-view></job-site-map-view>
       </div>
       <!-- map view end -->
       <!-- list view start -->
       <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> -->
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-if="flags.listView">
-        <table class="table quotes-table">
-          <thead>
-          <tr>
-            <th>Site ID</th>
-            <th>Site Name</th>
-            <th></th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr ng-repeat="jobsite in jobsites">
-            <td><a href="" class="invoice-no">{{jobsite.SiteID}}</a></td>
-            <td>{{jobsite.Site_Name}}</td>
-            <td class="text-right">
-              <a class="invoice-no view-down"  ng-click="viewJobSiteDetails(jobsite);"><i class="fa fa-eye invoice-no heading-text"></i></a>
-              <a ui-sref="hm.dashboard.jobSites.editJobSite({data : jobsite})" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
-              <a href="#" class="invoice-no view-down"><i class="fa fa-trash invoice-no heading-text"></i></a></td>
-          </tr>
-          </tbody>
-        </table>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-if="params.listView">
+
+        <job-site-list-view></job-site-list-view>
       </div>
 </div>
 
