--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -1,6 +1,6 @@
 <div class="container content-top">
   <div style="min-height: 400px;">
-    <load-indicator loading="cartFetchInProgress"></load-indicator>
+    <load-indicator loading="cartFetchInProgress" class="loader-top"></load-indicator>
     <div ng-show="!cartFetchInProgress">
       <!-- cart -->
       <div ng-show="cart">
