--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -129,11 +129,11 @@
     </div>
   </div>
 
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding visible-sm visible-xs devider devider-bottom"></div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding visible-sm hidden-xs devider devider-bottom"></div>
 
   <!-- cart summary part -->
   <div ui-view="snapshot"></div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding devider devider-bottom"></div>
   <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 cont-rent-btn ">
       <button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
