minor changes to main css

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2355,6 +2355,7 @@ button:hover {
 
 .cart-summary-col .equipment-name {
 	margin-bottom: 5px;
+    font-size: 14px;
 }
 
 .cart-summary-col .total {
