--- a/src/app/jobsites/jobsites.html
+++ b/src/app/jobsites/jobsites.html
@@ -58,7 +58,9 @@
   </div>
   <!-- map view start -->
   <div class="row">
-    <load-indicator loading="flags.jobSiteFetchInProgress"></load-indicator>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <load-indicator loading="flags.jobSiteFetchInProgress"></load-indicator>
+      </div>
   </div>
 
   <div ng-style="{'visibility': flags.jobSiteFetchInProgress? 'hidden':'visible'}">
