--- a/src/app/jobsites/add-jobsite.html
+++ b/src/app/jobsites/add-jobsite.html
@@ -48,7 +48,9 @@
 </div>
 <div class="row nomargin">
   <div class="col-md-12 site-col">
-    <button class="btn sign_mybtn all-btn primary-btn pull-right" ng-click="addJobSite()">Add Job Site</button>
+    <button class="btn sign_mybtn all-btn primary-btn pull-right" ng-click="addJobSite()">
+      <span btn-load-indicator="Add:JobSite:Process">Add Job Site</span>
+    </button>
     <button class="btn sell-equ all-btn popup-white-btn" ng-click="$dismiss()">Cancel</button>
   </div>
 </div>
