--- a/src/app/jobsites/jobsites.html
+++ b/src/app/jobsites/jobsites.html
@@ -51,10 +51,8 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col">
     <a ui-sref="hm.dashboard.jobSites.addJobSite" class="btn pull-left manage-job-btn add-job-site-btn sign_mybtn all-btn primary-btn">Add Job Site</a>
-    <!-- <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn">List View</button>
-    <button class="btn pull-right manage-job-btn map map-view-btn">Map View</button> -->
-    <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : flags.listView}" ng-click="toggleListView(true)">List View</button>
-    <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn all-btn" ng-click="toggleListView(false)" ng-class="{'active primary-btn' : !flags.listView}">Map View</button>
+    <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : params.listView}" ng-click="toggleListView(true)">List View</button>
+    <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn all-btn" ng-click="toggleListView(false)" ng-class="{'active primary-btn' : !params.listView}">Map View</button>
   </div>
   <!-- map view start -->
   <div class="row">
