--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2461,4 +2461,11 @@ button:hover {
 td.quantity .error{display:none;color:#ff5600;}
 td.quantity .ng-invalid-pattern .error{display:block;}
 
+.jobsite-search-show {
+	width: 100%;
+}
+
+.job-site-list .jobsite-search-show input {
+	width: 90%;
+}
 
