--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -325,6 +325,16 @@
       <h1 class="rent_tit">Rent and Buy Construction Equipments in Seconds</h1>
       <!-- End  Header Title -->
 
+      <!-- transition line -->
+      <h3 class="sentence">Rent And Buy Construction
+        <div class="slidingVertical">
+          <span>Equipments</span>
+          <span>Parts</span>
+          <span>Accesories</span>
+          <span>Attachments</span>
+        </div>
+      </h3>
+
       <!-- START  RENT/BUY BUTTON -->
       <div class="rent_bt_main">
         <button type="button" class="btn my-btn rent-buy-btn" ng-class="{'active' : flags.rented}" ng-click="toggleRentOrBuy(true)">RENT</button>
