--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -7,7 +7,10 @@
 */
 
 @media screen and (max-width: 1200px) {
-
+  .sentence {
+    padding-left: 60px;
+    padding-right: 0;
+  }
 }
 
 @media screen and (max-width: 980px) {
@@ -301,6 +304,23 @@
     padding: 0;
   }
 
+  .slidingVertical span{
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+
+  .slidingVertical {
+    display: block;
+    text-indent: 0;
+    text-align: center;
+  }
+
+  .sentence {
+    padding: 0 !important;
+    text-align: center;
+  }
+
 }
 
 @media screen and (max-width: 600px) {
@@ -318,7 +338,7 @@
 
   .rent_tit {
     font-size: 24px;
-    padding: 8% 0 5% 0;
+    padding: 8% 0 0 0;
   }
 
   .search-head {
@@ -832,6 +852,13 @@
 
   .security-input {
     margin-top: 10px;
+  }
+  .sentence {
+    font-size: 24px;
+    padding-left: 110px;
+    padding-right: 110px;
+    margin-top: 20px;
+    margin-bottom: 40px;
   }
 }
 
