--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -369,3 +369,10 @@ html, body {
 .jobsite-lookup .angular-google-map-container{
   height:200px;
 }
+
+/*.filter_cat_tex1 .btn-checkbox{*/
+  /*width: 25px;*/
+  /*height: 25px;*/
+
+/*}*/
+
