--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -32,7 +32,8 @@
                             <span style="font-size: 18px;">
                               <i class="fa {{ selectedAttributes[attribute.Attribute_slug].indexOf(value.attribute_value_name) > -1 ? 'fa-check-square-o' : 'fa-square-o'}}"></i>
                             </span>
-                            <span class="cat_mar">{{value.attribute_value_name}}</span></label>
+                            <span class="cat_mar">{{value.attribute_value_name}}</span>
+                          </label>
                         </div>
                       </li>
                     </ul>
